--- a/issue-tracker-main/issue-tracker-main/app/globals.css
+++ b/issue-tracker-main/issue-tracker-main/app/globals.css
@@ -16,6 +16,14 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.basic-avatar {
+  background-color: #fde3cf !important;
+  color: #f56a00 !important;
+  padding: 2px;
 }
 
 @layer utilities {
