--- a/issue-tracker-main/issue-tracker-main/app/css/card.css
+++ b/issue-tracker-main/issue-tracker-main/app/css/card.css
@@ -6,6 +6,7 @@
   justify-content: flex-start;
   min-width: 1px;
   position: relative;
+  margin-bottom: 5px;
   p {
     font-size: 16px;
     font-weight: 500;
