--- a/issue-tracker-main/issue-tracker-main/app/globals.css
+++ b/issue-tracker-main/issue-tracker-main/app/globals.css
@@ -32,13 +32,13 @@ body {
   }
 }
 
-.ant-collapse{
+.ant-collapse {
   /*border: none !important;*/
 }
 
-@import '@radix-ui/colors/black-alpha.css';
-@import '@radix-ui/colors/mauve.css';
-@import '@radix-ui/colors/violet.css';
+@import "@radix-ui/colors/black-alpha.css";
+@import "@radix-ui/colors/mauve.css";
+@import "@radix-ui/colors/violet.css";
 
 /* reset */
 button {
@@ -77,7 +77,8 @@ button {
   overflow: hidden;
   background-color: white;
   border-radius: 6px;
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35),
+    0px 10px 20px -15px rgba(22, 23, 24, 0.2);
 }
 
 .SelectViewport {
@@ -137,4 +138,10 @@ button {
   background-color: white;
   color: var(--violet-11);
   cursor: default;
+}
+
+.ant-btn-primary {
+  color: #fff;
+  background: #1677ff;
+  box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
 }
